--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
 /Users/shreya/Documents/gitlfs/dashappdata.csv filter=lfs diff=lfs merge=lfs -text
+/Users/shreya/Documents/gitlfs/usaccidentdata/dashappdata.csv filter=lfs diff=lfs merge=lfs -text
